<?xml version="1.0"?>
<package>
  <name>kitchen_games_pp</name>
  <version>0.0.0</version>
  <description>package for postprocessing kitchen games</description>

  <maintainer email="a_dot_haidu@gmail.com">Andrei Haidu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>beliefstate_client</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mongodb-dev</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>beliefstate_client</run_depend>

  <export>
  </export>

</package>
